--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "cloudinary": "^2.0.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
@@ -16,6 +17,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.2.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-google-oauth": "^2.0.0"
   }
