--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.2.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.7.0",
     "passport": "^0.7.0",
     "passport-google-oauth": "^2.0.0"
   }
