--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.18.0",
+    "googleapis": "^133.0.0",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.2.0",
