--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "cloudinary": "^2.0.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
